# ROS2-BIM-Digital-Twin

./: CMakeLists.txt  README.md  construction_site.sdf  model.config  package.xml
launch/: gazebo_launch.py
meshes/: Bim_Model1.dae  bim_world_1.dae
models/project_a_description/: construction_site.sdf
scripts/: wait_and_spawn.py
urdf/: construction_robot.urdf
worlds/: site.world
